--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,6 @@ body {
     margin-right: 0px;
     margin-bottom: 0px; 
     font-size: 14px;
-    font-family: 微软雅黑
 }
 
 a{ text-decoration:none;}
@@ -16,6 +15,7 @@ h1 ,h2{ padding:0px; margin:0px;}
 
 
 .header{ background:url(../images/bj.jpg) repeat-x;  height: 320px;}
+.page1{ width:1000px; margin:0 auto;padding-top:10px; background:url(../images/center-bj.jpg) repeat-x;}
 .page{ width:1000px; margin:0 auto;padding-top:10px;}
 .top{ float:right;color:#aaaaaa}
 .top a{ color:#aaaaaa; font-size:14px;}
@@ -54,7 +54,7 @@ h1 ,h2{ padding:0px; margin:0px;}
 .yu{ background:url(../images/ico6.png) no-repeat; height: 526px;width: 700px;margin-left:670px; position:relative;top:520px;position:absolute; }
 #yu{height: 526px;width: 700px;margin-left:670px; position:relative;top:520px;position:absolute; }
 .yu1{ background:url(../images/ico6.png) no-repeat; height: 526px;width: 700px;margin-left:670px; position:relative;position:absolute; top:380px}
-.banner{ background:url(../images/banner_bj.png) no-repeat; height:355px; padding:10px; float:left;}
+.banner{ background:url(../images/banner_bj.png) no-repeat; height:342px; padding:10px; float:left;}
 .index-right{ 
     float: right;
     background: url(../images/ico2.png) no-repeat;
@@ -114,12 +114,11 @@ h1 ,h2{ padding:0px; margin:0px;}
 /**/
 .qiye-left{ float:left; width:305px; background:url(../images/qiye_left.png) no-repeat; height:556px;}
 .qiye-title{ 
-    font-size: 24px;
+    font-size: 18px;
     color:#000000;  
     text-align:center; 
     padding:28px 0 23px 0; 
-    font-weight: bold;
-}
+    font-weight: bold; font-family:微软雅黑}
 .qiye-tiitle-xian{border-bottom:1px solid #bfc1c4; width:249px; margin:0 auto; margin-bottom: 9px;}
 .qiye-list{}
 .list{background:#ffa54a;width:290px; height:39px; display:block; line-height:39px; margin:0 auto; font-weight:bold; color:#FFF}
@@ -143,9 +142,9 @@ img{ border:0px}
 .qiye-ld1{float:left }
 
 .body{
-    background-color: #EEEEEE;
+
     padding: 10px 10px;
-    box-shadow: 1px 1px 5px #ccc;
+
 }
 
 .article-title{
